Fix menu links in dark mode

--- a/_sass/darkmode.scss
+++ b/_sass/darkmode.scss
@@ -18,4 +18,7 @@
 	a:visited {
 		color: $rose-purple-light;
 	}
+	.site-nav .page-link {
+		color: white !important;
+	}
 }
